--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -16,7 +16,10 @@
             android:layout_width="100dp"
             android:background="#673AB7"
             android:layout_height="100dp"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/path"/>
 
     </androidx.cardview.widget.CardView>
 
