--- a/app/src/main/res/layout/photo_item.xml
+++ b/app/src/main/res/layout/photo_item.xml
@@ -14,6 +14,7 @@
         <ImageView
             android:id="@+id/photo"
             android:layout_width="100dp"
+            android:scaleType="centerCrop"
             android:layout_height="100dp"/>
         <TextView
             android:layout_width="wrap_content"
